--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </header>
 <main>
 	<div id="banner">
+		
+		<div class="arrow arrow_left">
+			<img src="assets/images/arrow_left.png" alt="fleche vers la gauche">
+			</div>
+			<div class="arrow arrow_right">
+				<img src="assets/images/arrow_right.png" alt="fleche vers la droite">
+				</div>
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
